# esp32_bsdiff

./: CMakeLists.txt  Kconfig.projbuild  README.md  bsdiff.c  bspatch.c  bspatch.h
.github/workflows/: github-actions-test.yml
test/: CMakeLists.txt  run.sh  sdkconfig.defaults
test/main/: CMakeLists.txt  test_bsdiff.c
